# datatoolbelt

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  Makefile  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: Makefile  make.bat
docs/source/: conf.py  example.ipynb
src/datatoolbelt/: pandastools.py  pdtools.py
tests/: test_datatoolbelt.py  test_pandastools.py  test_pdtools.py
